--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Yoga Jigsaw puzzle",
   "short_name": "YogaJigsaw",
-  "start_url": "https://yoga-jig-saw.glitch.me/",
+  "start_url": "https://pd2.github.io/yoga-jigsaw/",
   "icons": [
     {
       "src": "https://cdn.glitch.global/34d4b680-898f-4fd7-b277-ec120f30bdfa/yoga_jigsaw.png",
